@@ -12244,6 +12244,7 @@ insert into help_items values (3,'smtp_perf&lt;,port&gt;','Checks if SMTP server
 insert into help_items values (3,'ssh_perf&lt;,port&gt;','Checks if SSH server is running and accepting connections. 0 - SSH server is down. Otherwise, number of seconds spent connecting to SSH server.');
 insert into help_items values (3,'tcp_perf,port','Checks if TCP service is running and accepting connections on port. 0 - the service on the port is down. Otherwise, number of seconds spent connecting to TCP service.');
 
+insert into help_items values (5,'zabbix[boottime]','Startup time of Zabbix server, Unix timestamp.');
 insert into help_items values (5,'zabbix[history]','Number of values stored in table HISTORY.');
 insert into help_items values (5,'zabbix[history_log]','Number of values stored in table HISTORY_LOG.');
 insert into help_items values (5,'zabbix[history_str]','Number of values stored in table HISTORY_STR.');
@@ -12252,10 +12253,14 @@ insert into help_items values (5,'zabbix[history_uint]','Number of values stored
 insert into help_items values (5,'zabbix[items]','Number of items in Zabbix database.');
 insert into help_items values (5,'zabbix[items_unsupported]','Number of unsupported items in Zabbix database.');
 insert into help_items values (5,'zabbix[log]','Stores warning and error messages generated by Zabbix server.');
+insert into help_items values (5,'zabbix[proxy,&lt;name&gt;,&lt;param&gt;]','Time of proxy last access. Name - proxy name. Param - lastaccess. Unix timestamp.');
 insert into help_items values (5,'zabbix[queue&lt;,from&gt;&lt;,to&gt;]','Number of items in the queue which are delayed by from to to seconds, inclusive.');
+insert into help_items values (5,'zabbix[rcache,&lt;cache&gt;,&lt;mode&gt;]','Configuration cache statistics. Cache - buffer (modes: pfree, total, used, free).');
 insert into help_items values (5,'zabbix[trends]','Number of values stored in table TRENDS.');
 insert into help_items values (5,'zabbix[trends_uint]','Number of values stored in table TRENDS_UINT.');
 insert into help_items values (5,'zabbix[triggers]','Number of triggers in Zabbix database.');
+insert into help_items values (5,'zabbix[uptime]','Uptime of Zabbix server process in seconds.');
+insert into help_items values (5,'zabbix[wcache,&lt;cache&gt;,&lt;mode&gt;]','Data cache statistics. Cache - one of values (modes: all, float, uint, str, log, text), history (modes: pfree, total, used, free), trend (modes: pfree, total, used, free), text (modes: pfree, total, used, free).');
 
 insert into help_items values (8,'grpfunc[&lt;Group&gt;,&lt;Key&gt;,&lt;func&gt;,&lt;param&gt;]','Aggregate checks do not require any agent running on a host being monitored. Zabbix server collects aggregate information by doing direct database queries. See Zabbix Manual.');
 
