@@ -25,6 +25,7 @@ Changes for 1.9.0
 
 Changes for 1.8.4rc3
 
+ - [ZBX-2672] added internal checks zabbix[*] to help items in data.sql (Sasha)
  - [ZBX-3255] fixed string escaping under IBM DB2 (asaveljevs,Sasha)
  - [ZBX-3201] fixed evaluation of calculated items with multiline expressions (asaveljevs)
  - [ZBX-3210] fixed incorrect height scaling in graphs (KB,asaveljevs)
